# awesome-web-scraper

./: .env.example  .gitignore  DEMO_WORKFLOW.md  FINAL_TEST_VALIDATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  JOSHSISTO_TEST_REPORT.md  NEW_ARCHITECTURE_GUIDE.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_GUIDE.md  api_service.py  comprehensive_test_report.json  data_retriever.py  docker-compose.yml  final_test_suite.py  httpbin_test.json  integration_test_results.json  integration_tests.py  master_scraper.py  monitoring_test.py  pyproject.toml  pytest.ini  real_scraper_test.py  requirements-api.txt  requirements-minimal.txt  requirements.txt  scrape_joshsisto.py  scraper_recommendation.md  setup_dev.py  simple_monitoring_results.json  simple_monitoring_test.py  test_joshsisto_scraper.py  test_joshsisto_scraper_v2.py  test_results.json  test_scenarios.py  validate_implementation.py  vpn_checker.py
common/models/: __init__.py  base.py  proxy_config.py  scrape_request.py  scrape_result.py
docs/: README.md  data-retrieval-guide.md  installation.md  quick-start.md  usage-guide.md
example_results/: health_summary.json  news_articles.csv  news_articles.json  price_monitoring.json  research_analysis.json  research_data.csv  research_raw_data.json  social_content.json  trending_topics.json  website_health_reports.json
examples/: practical_examples.py
scripts/: run_tests.py
services/extraction/: __init__.py  extraction_orchestrator.py  playwright_service.py  pydoll_service.py  scrapy_service.py
services/proxy_management/: __init__.py  pia_integration.py  proxy_rotator.py  vpn_manager.py
tests/unit/: test_extraction_services.py  test_models.py  test_proxy_rotator.py  test_vpn_manager.py
