[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-scraper"
version = "0.1.0"
description = "Production-ready web scraper with VPN, multiple frameworks, and microservices architecture"
authors = [
    {name = "Josh", email = "josh@example.com"},
]
dependencies = [
    "scrapy>=2.11.0",
    "playwright>=1.45.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selectolax>=0.3.17",
    "fake-useragent>=1.5.1",
    "pymongo>=4.6.0",
    "motor>=3.4.0",
    "redis>=5.0.0",
    "python-openvpn>=0.1.0",
    "requests-oauthlib>=1.3.1",
    "undetected-chromedriver>=3.5.4",
    "selenium-stealth>=1.0.6",
    "playwright-stealth>=1.0.6",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "uvloop>=0.19.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "celery>=5.3.0",
    "kombu>=5.3.0",
    "cryptography>=41.0.0",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "common*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "N", "B", "C", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true